# SE_WorkStation

./: README.md
smart_eye_com/: package.xml  setup.cfg  setup.py
smart_eye_com/smart_eye_com/: SE_WS_UI_Com.py  viact2025.crt
stitch_map/: CMakeLists.txt  package.xml
stitch_map/include/: point_types.hpp  preprocess_map.hpp
stitch_map/include/vlcal/common/: estimate_pose.hpp  frame.hpp  frame_cpu.hpp
stitch_map/include/vlcal/costs/: lidarlidarpoint_cost.hpp
stitch_map/include/vlcal/preprocess/: generate_lidar_image.hpp
stitch_map/scripts/: find_matches_superglue.py
stitch_map/src/: estimate_transform.cpp  preprocess_map.cpp  stitch_node.cpp
stitch_map/src/vlcal/common/: estimate_pose.cpp  frame.cpp  frame_cpu.cpp  visual_lidar_data.cpp
stitch_map/src/vlcal/preprocess/: generate_lidar_image.cpp
stitch_map_msgs/: CMakeLists.txt  package.xml
stitch_map_msgs/msg/: StitchCommand.msg  StitchResults.msg
