<?xml version="1.0"?>
<package format="3">
  <name>stitch_map</name>
  <version>0.0.0</version>
  <description>Stitching maps from LiDAR and camera data using ROS 2</description>

  <maintainer email="long.nghiem@viact.ai">Long Nghiem</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>           
  <depend>stitch_map_msgs</depend>       

  <depend>cv_bridge</depend>

  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>